[tool.poetry]
name = "nuwave"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
ffmpeg = "^1.4"
prefetch_generator = "^1.0.1"
librosa = "^0.9.1"
pytorch-lightning = "^1.6.1"
omegaconf = "^2.1.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
